tests/snapshots/ir/llvm_0__harness__llvm__complex_math_structure.snap
---
source: tests/harness/llvm.rs
expression: self.ir
---
; ModuleID = 'test_module'
source_filename = "test_module"

@fmt_f64 = global [4 x i8] c"%f\0A\00"
@fmt_i32 = global [4 x i8] c"%d\0A\00"
@fmt_str = global [4 x i8] c"%s\0A\00"

declare i32 @printf(ptr, ...)

define i32 @main() {
entry:
  %x = alloca double, align 8
  store double 1.000000e+00, ptr %x, align 8
  %y = alloca double, align 8
  store double 2.000000e+00, ptr %y, align 8
  %x1 = load double, ptr %x, align 8
  %y2 = load double, ptr %y, align 8
  %res = fadd double %x1, %y2
  %res3 = alloca double, align 8
  store double %res, ptr %res3, align 8
  ret i32 0
}
