tests/snapshots/ir/llvm_0__harness__llvm__print_f64.snap
---
source: tests/harness/llvm.rs
expression: self.ir
---

@fmt_f64 = global [4 x i8] c"%f\0A\00"
@fmt_i32 = global [4 x i8] c"%d\0A\00"
@fmt_str = global [4 x i8] c"%s\0A\00"

declare i32 @printf(ptr, ...)

define i32 @main() {
entry:
  %printf_call = call i32 (ptr, ...) @printf(ptr @fmt_f64, double 1.050000e+01)
  ret i32 0
}
